BTrace support for custom JFR events (#429)